cmake_minimum_required(VERSION 3.5)

project(QtOpenAPIClient)

set(CMAKE_AUTOMOC ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Network Gui)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Network Gui)

include(GNUInstallDirs)
include(CMakePackageConfigHelpers)

add_library(${PROJECT_NAME}
  OAIAccountFeatures.h
  OAIAccountInfo.h
  OAIAccountInfoCountryCurrencies.h
  OAIAccountInfoData.h
  OAIAccountInfoDataCc.h
  OAIAccountInfoDataCcs.h
  OAIAccountInfoData_email_settings.h
  OAIAccountInfoData_extra.h
  OAIAccountInfoData_fraudrecord.h
  OAIAccountInfoLimits.h
  OAIAccountInfoLimits_inner.h
  OAIAccountInfoMaxMindResponse.h
  OAIAccountInfoMaxMindResponse_riskScore.h
  OAIAccountInfoOauthConfig.h
  OAIAccountInfoOauthConfigProviders.h
  OAIAccountInfoOauthConfigProviders_value.h
  OAIAccountInfoPost.h
  OAIAccountInfo_oauthproviders.h
  OAIAccountSshKey.h
  OAIAffiliateBannerRow.h
  OAIAffiliateDockSetup.h
  OAIAffiliatePaymentSetup.h
  OAIAffiliateTrafficRow.h
  OAIAssetServer.h
  OAIAssetServer_CPU_inner.h
  OAIBackup.h
  OAIBackupBillingDetails.h
  OAIBackupClientLink.h
  OAIBackupExtraInfoTables.h
  OAIBackupIPInfo.h
  OAIBackupIPInfoRow.h
  OAIBackupLoginResponse.h
  OAIBackupOrderPostResponse.h
  OAIBackupOrderPostResponse_cj_params.h
  OAIBackupOrderPutRequest.h
  OAIBackupOrderPutResponse.h
  OAIBackupRow.h
  OAIBackupServiceInfo.h
  OAIBackupServiceMaster.h
  OAIBackupsOrder.h
  OAIBackupsOrderPackageCosts.h
  OAIBackupsOrderServiceTypes.h
  OAIBackupsOrder_serviceTypes.h
  OAIBandwidth.h
  OAIBillingAddCcRequest.h
  OAIBillingInvoiceDetail.h
  OAIBillingInvoiceList.h
  OAIBillingPaymentMethodRequest.h
  OAIBillingPrepayRequest.h
  OAIBillingVerifyCcRequest.h
  OAIBuyItNowList.h
  OAIBuyItNowRow.h
  OAIBuyItNowRow_cpu_inner.h
  OAIBuyItNowRow_cpu_inner_oneOf.h
  OAIBuyItNowServerOrder_200_response.h
  OAIBuyItNowServerOrder_200_response_bandwidth_inner.h
  OAIBuyItNowServerOrder_200_response_cp_inner.h
  OAIBuyItNowServerOrder_200_response_ips_inner.h
  OAIBuyItNowServerOrder_200_response_os_inner.h
  OAIBuyItNowServerOrder_200_response_raid_inner.h
  OAICancelBackup_200_response.h
  OAICancelDomain_200_response.h
  OAICancelScrubIp_200_response.h
  OAICaptchaResponse.h
  OAIChargeInvoiceRows.h
  OAIChargeInvoiceRows_invoices_value.h
  OAIChargeInvoiceRows_invoices_value_paid_invoices_value.h
  OAIChargeInvoiceRows_invoices_value_paid_invoices_value_refund_invoices_value.h
  OAICloseTicketResponseSchema.h
  OAIConfigIds.h
  OAIConfigLists.h
  OAIControlPanel.h
  OAICpu.h
  OAICpuWithDefaults.h
  OAICreateFilter.h
  OAICreateFilter_201_response.h
  OAICreateFilter_400_response.h
  OAICreateFilter_500_response.h
  OAICreateFirewallRule.h
  OAICreateGeoFirewallRule.h
  OAICreateGeoRule_400_response.h
  OAICreateRule_201_response.h
  OAICreateRule_400_response.h
  OAICreateRule_500_response.h
  OAIDeleteFilter_200_response.h
  OAIDeleteFilter_400_response.h
  OAIDeleteFilter_500_response.h
  OAIDelete_Firewall_Rule.h
  OAIDelete_Geo_Firewall_Rule.h
  OAIDenyRuleNew.h
  OAIDenyRuleRecord.h
  OAIDisableScrub_200_response.h
  OAIDisableScrub_400_response.h
  OAIDisableScrub_500_response.h
  OAIDnsListItem.h
  OAIDnsNewDomain.h
  OAIDnsNewRecord.h
  OAIDnsRecord.h
  OAIDnsRecordType.h
  OAIDnsUpdateRecord.h
  OAIDomain.h
  OAIDomainAdminContact.h
  OAIDomainAllInfo.h
  OAIDomainAllInfo_attributes.h
  OAIDomainAllInfo_attributes_contact_set.h
  OAIDomainBillingDetails.h
  OAIDomainBillingExtra.h
  OAIDomainClientLink.h
  OAIDomainContactDetails.h
  OAIDomainDnssecRecords.h
  OAIDomainDnssecRecords_inner.h
  OAIDomainDnssecRequest.h
  OAIDomainLookupResponse.h
  OAIDomainNameServer.h
  OAIDomainNameserverGetResponse.h
  OAIDomainNameserverGetResponse_inner.h
  OAIDomainNameserverPostRequest.h
  OAIDomainNameserverPutRequest.h
  OAIDomainOrder.h
  OAIDomainOrderResponse.h
  OAIDomainOrderResponse_attributes.h
  OAIDomainOrderServices10001.h
  OAIDomainOrderTldServices.h
  OAIDomainOrder_services.h
  OAIDomainOwnerContact.h
  OAIDomainProvProcessPending.h
  OAIDomainProvProcessPending_attributes.h
  OAIDomainRow.h
  OAIDomainSearchResponse.h
  OAIDomainServiceInfo.h
  OAIDomainServiceType.h
  OAIDomainTechContact.h
  OAIDomainWhoisPrivacyRequest.h
  OAIDownloadQsBackup_200_response.h
  OAIDownloadQsBackup_request.h
  OAIEmailAddress.h
  OAIEmailAddressName.h
  OAIEnableScrub_200_response.h
  OAIEnableScrub_500_response.h
  OAIFieldLabel.h
  OAIFloating_ipsCancel_200_response.h
  OAIFormValues.h
  OAIGenericResponse.h
  OAIGetAccountInfo_401_response.h
  OAIGetAccountTfaSetup_200_response.h
  OAIGetOauthRedirect_200_response.h
  OAIGetOrderDetail_200_response.h
  OAIGetOrderDetail_200_response_ips_inner.h
  OAIGetOrderDetail_200_response_packageCosts.h
  OAIGetOrderDetail_200_response_serviceTypes_inner.h
  OAIGetScrubIpDetails_200_response.h
  OAIGetScrubIpDetails_200_response_billingDetails.h
  OAIGetScrubIpDetails_200_response_client_links_inner.h
  OAIGetScrubIpDetails_200_response_extraInfoTables.h
  OAIGetScrubIpDetails_200_response_extraInfoTables_scrub_ips.h
  OAIGetScrubIpDetails_200_response_extraInfoTables_scrub_ips_rows_inner.h
  OAIGetScrubIpDetails_200_response_filter_firewall.h
  OAIGetScrubIpDetails_200_response_filter_firewall_filters_inner.h
  OAIGetScrubIpDetails_200_response_filter_firewall_rules_inner.h
  OAIGetScrubIpDetails_200_response_serviceInfo.h
  OAIGetWebsiteBuyIp_200_response.h
  OAIHardDrive.h
  OAIHome.h
  OAIHomeDetailsModulesBackups.h
  OAIHomeDetailsModulesDomains.h
  OAIHomeDetailsModulesLicenses.h
  OAIHomeDetailsModulesQuickservers.h
  OAIHomeDetailsModulesServers.h
  OAIHomeDetailsModulesVps.h
  OAIHomeDetailsModulesWebhosting.h
  OAIHomeServicesDomainsLinks.h
  OAIHomeServicesLicensesLinks.h
  OAIHomeServicesServersLinks.h
  OAIHomeServicesVpsLinks.h
  OAIHomeServicesWebhostingLinks.h
  OAIHome_details.h
  OAIHome_details_modules.h
  OAIHome_services.h
  OAIHome_services_backups.h
  OAIHome_services_domains.h
  OAIHome_services_licenses.h
  OAIHome_services_servers.h
  OAIHome_services_vps.h
  OAIHome_services_webhosting.h
  OAIHome_ticketStatus.h
  OAIHome_ticketStatusView.h
  OAIHostnameObject.h
  OAIInitiatePayment_200_response.h
  OAIInline_object.h
  OAIInvoice.h
  OAIInvoiceRow.h
  OAIIpBlock.h
  OAIIpLimitRange.h
  OAIIpObject.h
  OAILicense.h
  OAILicenseBillingDetails.h
  OAILicenseClientLink.h
  OAILicenseIpInfo.h
  OAILicenseIpInfoRow.h
  OAILicenseRow.h
  OAILicenseServiceInfo.h
  OAILicenseServiceType.h
  OAILicense_extraInfoTables.h
  OAILicensesCancel_200_response.h
  OAILicensesOrder.h
  OAILicensesOrderServiceCategories509.h
  OAILicensesOrderServiceTypes11482.h
  OAILicensesOrder_packageCosts.h
  OAILicensesOrder_serviceCategories.h
  OAILicensesOrder_serviceTypes.h
  OAILoginErrorResponse.h
  OAILoginInfo.h
  OAILoginServiceCounts.h
  OAILoginSubmissionExample.h
  OAILoginSubmissionExample_g_recaptcha_response.h
  OAILoginSubmissionExample_g_recaptcha_response_dep.h
  OAILoginSuccessResponse.h
  OAIMailAlertRequest.h
  OAIMailAlertUpdateRequest.h
  OAIMailAlertsResponse.h
  OAIMailAlertsResponse_inner.h
  OAIMailAttachment.h
  OAIMailBillingDetails.h
  OAIMailBlockClickHouse.h
  OAIMailBlockRspamd.h
  OAIMailBlocks.h
  OAIMailCancel_200_response.h
  OAIMailClientLink.h
  OAIMailDelistRequest.h
  OAIMailDelistResponse.h
  OAIMailDeliverabilityResponse.h
  OAIMailExtraInfoTable.h
  OAIMailExtraInfoTableRow.h
  OAIMailLog.h
  OAIMailLogEntry.h
  OAIMailOrder.h
  OAIMailRow.h
  OAIMailSchema.h
  OAIMailSchema_extraInfoTables.h
  OAIMailServiceInfo.h
  OAIMailServiceType.h
  OAIMailStatsType.h
  OAIMailStatsType_volume.h
  OAIMailStatsType_volume_from.h
  OAIMailStatsType_volume_ip.h
  OAIMailStatsType_volume_to.h
  OAIMailTutorialsTable.h
  OAIMailTutorialsTableRow.h
  OAIMemoryOption.h
  OAIModuleSettings.h
  OAIModules.h
  OAIMonthlyCounts.h
  OAIOperatingSystem.h
  OAIPasswordRequest.h
  OAIPatchOauthTwoFactor_200_response.h
  OAIPatchOauthTwoFactor_request.h
  OAIPaymentInvoiceRows.h
  OAIPlaceBuyNowServer_request.h
  OAIPlaceScrubOrder_201_response.h
  OAIPlaceScrubOrder_201_response_order_details.h
  OAIPlaceScrubOrder_201_response_order_details_cj_params.h
  OAIPostOauthCallback_200_response.h
  OAIPostOauthCallback_request.h
  OAIPostWebsiteBuyIp_200_response.h
  OAIPostWebsiteBuyIp_request.h
  OAIPostWebsiteMigration_200_response.h
  OAIPostWebsiteMigration_request.h
  OAIQueueResponse.h
  OAIQuickserver.h
  OAIQuickserverAddons.h
  OAIQuickserverAddonsRow.h
  OAIQuickserverBillingDetails.h
  OAIQuickserverClientLink.h
  OAIQuickserverIpInfo.h
  OAIQuickserverIpTableRow.h
  OAIQuickserverOrder.h
  OAIQuickserverOrderDistroSelUbuntu.h
  OAIQuickserverOrderServerDetails381.h
  OAIQuickserverOrderTemplatesUbuntu64.h
  OAIQuickserverOrderVersionCentosstream8.h
  OAIQuickserverOrder_distro_sel.h
  OAIQuickserverOrder_server_details.h
  OAIQuickserverOrder_templates.h
  OAIQuickserverOrder_version.h
  OAIQuickserverRow.h
  OAIQuickserverServiceExtra.h
  OAIQuickserverServiceInfo.h
  OAIQuickserverServiceMaster.h
  OAIQuickserver_extraInfoTables.h
  OAIQuickserver_serviceExtra.h
  OAIQuickserversCancel_200_response.h
  OAIRaidOption.h
  OAIRegion.h
  OAIReplyTicketRequest.h
  OAIReplyTicketResponseSchema.h
  OAIRestoreRequest.h
  OAIReverseDnsEntries.h
  OAIScrubIpFilterTypes.h
  OAIScrubIpFilterTypes_filters_value.h
  OAIScrubIpPlaceOrder.h
  OAIScrubIpsDeleteRule_200_response.h
  OAIScrubIpsDeleteRule_400_response.h
  OAIScrubIpsDeleteRule_500_response.h
  OAIScrubIpsLogRowSchema.h
  OAIScrubIpsRowSchema.h
  OAISearchAutocompleteResponse.h
  OAISendMail.h
  OAISendMailAdv.h
  OAIServer.h
  OAIServerAsset.h
  OAIServerAssets.h
  OAIServerBillingDetails.h
  OAIServerClientLink.h
  OAIServerExtraInfoTables.h
  OAIServerIpmiLiveInfo.h
  OAIServerIpmiLiveRequest.h
  OAIServerIpmiPowerRequest.h
  OAIServerLease.h
  OAIServerLocation1.h
  OAIServerNetworkInfo.h
  OAIServerNetworkInfo_assets.h
  OAIServerNetworkInfo_switchports.h
  OAIServerOrder.h
  OAIServerOrderBandwidth.h
  OAIServerOrderCPU.h
  OAIServerOrderConfigIds.h
  OAIServerOrderControlPanel.h
  OAIServerOrderFieldLabel.h
  OAIServerOrderFieldLabels.h
  OAIServerOrderFormValues.h
  OAIServerOrderGetResponse.h
  OAIServerOrderIP.h
  OAIServerOrderMemory.h
  OAIServerOrderOS.h
  OAIServerOrderRAID.h
  OAIServerOrder_bandwidth_li.h
  OAIServerOrder_cp_li.h
  OAIServerOrder_cpu_li.h
  OAIServerOrder_ips_li.h
  OAIServerOrder_memory_li.h
  OAIServerOrder_memory_li_254.h
  OAIServerOrder_os_li.h
  OAIServerRow.h
  OAIServerServiceInfo.h
  OAIServerSwitchport.h
  OAIServer_locations.h
  OAIServersBuyNowError.h
  OAIServersBuyNowResponse.h
  OAIServersBuyNowResponse_order_details.h
  OAIServersCancel_200_response.h
  OAIService.h
  OAIServiceCategories.h
  OAIServiceCategory.h
  OAIServiceType.h
  OAIServiceTypes.h
  OAIServices.h
  OAIServicesInfo.h
  OAISslCancel_200_response.h
  OAIStatusMonthlyBreakdown.h
  OAISuccessTextResponse.h
  OAITemplateRequest.h
  OAITextResponse.h
  OAITicketCustomFieldDetails.h
  OAITicketDetails.h
  OAITicketNew.h
  OAITicketNewResponse.h
  OAITicketPostDetails.h
  OAITicketPostDetails_inner.h
  OAITickets.h
  OAITicketsRow.h
  OAITickets_countArray.h
  OAITimezoneUpdate.h
  OAIUpdateAccountTfa_request.h
  OAIUpdateTicket.h
  OAIUpdateTicketResponseSchema.h
  OAIUrlRequest.h
  OAIVPSCancel_200_response.h
  OAIVPSTrafficDataDataSectionResponse.h
  OAIVPSTrafficDataDataSectionResponse_inner.h
  OAIViewMailLog_startDate_parameter.h
  OAIViewTicketResponse.h
  OAIVps.h
  OAIVpsBackupRow.h
  OAIVpsBackupRows.h
  OAIVpsBillingDetails.h
  OAIVpsCPData.h
  OAIVpsClientLink.h
  OAIVpsDAData.h
  OAIVpsDALicense.h
  OAIVpsExtraInfoTables.h
  OAIVpsIPInfo.h
  OAIVpsIPInfoRow.h
  OAIVpsOrder.h
  OAIVpsOrderPostRequest.h
  OAIVpsOrderPutRequest.h
  OAIVpsOrderPutResponse.h
  OAIVpsOrder_locationNames.h
  OAIVpsOrder_locationStock.h
  OAIVpsOrder_locationStock_1.h
  OAIVpsOrder_osNames.h
  OAIVpsOrder_packageCosts.h
  OAIVpsOrder_platformNames.h
  OAIVpsOrder_platformPackages.h
  OAIVpsOrder_serviceTypes.h
  OAIVpsOrder_serviceTypes_32.h
  OAIVpsOrder_templates.h
  OAIVpsOrder_templates_hyperv.h
  OAIVpsOrder_templates_hyperv_windows.h
  OAIVpsPlesk12Data.h
  OAIVpsPleskLicense.h
  OAIVpsRow.h
  OAIVpsServiceAddons.h
  OAIVpsServiceExtra.h
  OAIVpsServiceInfo.h
  OAIVpsServiceMaster.h
  OAIVpsSnapshot.h
  OAIVpsTemplateRow.h
  OAIVpsTemplatesList.h
  OAIVpsTrafficDataDataResponse.h
  OAIVpsTrafficDataSectionResponse.h
  OAIVpsTrafficHistoryResponse.h
  OAIVpsTrafficHistorySectionDataResponse.h
  OAIVpsTrafficHistorySectionResponse.h
  OAIVpsTrafficResponse.h
  OAIVpsTrafficTotalsResposne.h
  OAIVpsTrafficTotalsSectionResponse.h
  OAIVpsTrafficUsageAverageResponse.h
  OAIVpsTrafficUsageAverageSectionResponse.h
  OAIVpsTrafficUsageResponse.h
  OAIWebhostingCancel_200_response.h
  OAIWebsite.h
  OAIWebsiteBackups.h
  OAIWebsiteBackups_inner.h
  OAIWebsiteBillingDetails.h
  OAIWebsiteClientLink.h
  OAIWebsiteExtraInfoTables.h
  OAIWebsiteLoginResponse.h
  OAIWebsiteRow.h
  OAIWebsiteServiceInfo.h
  OAIWebsiteServiceMaster.h
  OAIWebsiteTable.h
  OAIWebsiteTableRow.h
  OAIWebsitesOrder.h
  OAIWebsitesOrderJsonServiceOffers.h
  OAIWebsitesOrderJsonServiceOffersItem.h
  OAIWebsitesOrderJsonServices.h
  OAIWebsitesOrderPackages.h
  OAIWebsitesOrderPackagesInfo.h
  OAIWebsitesOrderServiceOffer.h
  OAIWebsitesOrderServiceTypes.h
  OAIWebsitesOrder_packges.h
  OAIWebsitesOrder_serviceOffers.h
  OAIWebsitesOrder_serviceTypes.h
  OAIAccountApi.h
  OAIBackupsApi.h
  OAIBillingApi.h
  OAIDNSApi.h
  OAIDomainsApi.h
  OAIFloatingIPsApi.h
  OAILicensesApi.h
  OAIMailApi.h
  OAIPublicApi.h
  OAIQuickServersApi.h
  OAISSLCertificatesApi.h
  OAIScrubIpsApi.h
  OAIServersApi.h
  OAITicketsApi.h
  OAIVPSApi.h
  OAIWebhostingApi.h
  OAIHelpers.h
  OAIHttpRequest.h
  OAIObject.h
  OAIEnum.h
  OAIHttpFileElement.h
  OAIServerConfiguration.h
  OAIServerVariable.h
  OAIOauth.h
  OAIAccountFeatures.cpp
  OAIAccountInfo.cpp
  OAIAccountInfoCountryCurrencies.cpp
  OAIAccountInfoData.cpp
  OAIAccountInfoDataCc.cpp
  OAIAccountInfoDataCcs.cpp
  OAIAccountInfoData_email_settings.cpp
  OAIAccountInfoData_extra.cpp
  OAIAccountInfoData_fraudrecord.cpp
  OAIAccountInfoLimits.cpp
  OAIAccountInfoLimits_inner.cpp
  OAIAccountInfoMaxMindResponse.cpp
  OAIAccountInfoMaxMindResponse_riskScore.cpp
  OAIAccountInfoOauthConfig.cpp
  OAIAccountInfoOauthConfigProviders.cpp
  OAIAccountInfoOauthConfigProviders_value.cpp
  OAIAccountInfoPost.cpp
  OAIAccountInfo_oauthproviders.cpp
  OAIAccountSshKey.cpp
  OAIAffiliateBannerRow.cpp
  OAIAffiliateDockSetup.cpp
  OAIAffiliatePaymentSetup.cpp
  OAIAffiliateTrafficRow.cpp
  OAIAssetServer.cpp
  OAIAssetServer_CPU_inner.cpp
  OAIBackup.cpp
  OAIBackupBillingDetails.cpp
  OAIBackupClientLink.cpp
  OAIBackupExtraInfoTables.cpp
  OAIBackupIPInfo.cpp
  OAIBackupIPInfoRow.cpp
  OAIBackupLoginResponse.cpp
  OAIBackupOrderPostResponse.cpp
  OAIBackupOrderPostResponse_cj_params.cpp
  OAIBackupOrderPutRequest.cpp
  OAIBackupOrderPutResponse.cpp
  OAIBackupRow.cpp
  OAIBackupServiceInfo.cpp
  OAIBackupServiceMaster.cpp
  OAIBackupsOrder.cpp
  OAIBackupsOrderPackageCosts.cpp
  OAIBackupsOrderServiceTypes.cpp
  OAIBackupsOrder_serviceTypes.cpp
  OAIBandwidth.cpp
  OAIBillingAddCcRequest.cpp
  OAIBillingInvoiceDetail.cpp
  OAIBillingInvoiceList.cpp
  OAIBillingPaymentMethodRequest.cpp
  OAIBillingPrepayRequest.cpp
  OAIBillingVerifyCcRequest.cpp
  OAIBuyItNowList.cpp
  OAIBuyItNowRow.cpp
  OAIBuyItNowRow_cpu_inner.cpp
  OAIBuyItNowRow_cpu_inner_oneOf.cpp
  OAIBuyItNowServerOrder_200_response.cpp
  OAIBuyItNowServerOrder_200_response_bandwidth_inner.cpp
  OAIBuyItNowServerOrder_200_response_cp_inner.cpp
  OAIBuyItNowServerOrder_200_response_ips_inner.cpp
  OAIBuyItNowServerOrder_200_response_os_inner.cpp
  OAIBuyItNowServerOrder_200_response_raid_inner.cpp
  OAICancelBackup_200_response.cpp
  OAICancelDomain_200_response.cpp
  OAICancelScrubIp_200_response.cpp
  OAICaptchaResponse.cpp
  OAIChargeInvoiceRows.cpp
  OAIChargeInvoiceRows_invoices_value.cpp
  OAIChargeInvoiceRows_invoices_value_paid_invoices_value.cpp
  OAIChargeInvoiceRows_invoices_value_paid_invoices_value_refund_invoices_value.cpp
  OAICloseTicketResponseSchema.cpp
  OAIConfigIds.cpp
  OAIConfigLists.cpp
  OAIControlPanel.cpp
  OAICpu.cpp
  OAICpuWithDefaults.cpp
  OAICreateFilter.cpp
  OAICreateFilter_201_response.cpp
  OAICreateFilter_400_response.cpp
  OAICreateFilter_500_response.cpp
  OAICreateFirewallRule.cpp
  OAICreateGeoFirewallRule.cpp
  OAICreateGeoRule_400_response.cpp
  OAICreateRule_201_response.cpp
  OAICreateRule_400_response.cpp
  OAICreateRule_500_response.cpp
  OAIDeleteFilter_200_response.cpp
  OAIDeleteFilter_400_response.cpp
  OAIDeleteFilter_500_response.cpp
  OAIDelete_Firewall_Rule.cpp
  OAIDelete_Geo_Firewall_Rule.cpp
  OAIDenyRuleNew.cpp
  OAIDenyRuleRecord.cpp
  OAIDisableScrub_200_response.cpp
  OAIDisableScrub_400_response.cpp
  OAIDisableScrub_500_response.cpp
  OAIDnsListItem.cpp
  OAIDnsNewDomain.cpp
  OAIDnsNewRecord.cpp
  OAIDnsRecord.cpp
  OAIDnsRecordType.cpp
  OAIDnsUpdateRecord.cpp
  OAIDomain.cpp
  OAIDomainAdminContact.cpp
  OAIDomainAllInfo.cpp
  OAIDomainAllInfo_attributes.cpp
  OAIDomainAllInfo_attributes_contact_set.cpp
  OAIDomainBillingDetails.cpp
  OAIDomainBillingExtra.cpp
  OAIDomainClientLink.cpp
  OAIDomainContactDetails.cpp
  OAIDomainDnssecRecords.cpp
  OAIDomainDnssecRecords_inner.cpp
  OAIDomainDnssecRequest.cpp
  OAIDomainLookupResponse.cpp
  OAIDomainNameServer.cpp
  OAIDomainNameserverGetResponse.cpp
  OAIDomainNameserverGetResponse_inner.cpp
  OAIDomainNameserverPostRequest.cpp
  OAIDomainNameserverPutRequest.cpp
  OAIDomainOrder.cpp
  OAIDomainOrderResponse.cpp
  OAIDomainOrderResponse_attributes.cpp
  OAIDomainOrderServices10001.cpp
  OAIDomainOrderTldServices.cpp
  OAIDomainOrder_services.cpp
  OAIDomainOwnerContact.cpp
  OAIDomainProvProcessPending.cpp
  OAIDomainProvProcessPending_attributes.cpp
  OAIDomainRow.cpp
  OAIDomainSearchResponse.cpp
  OAIDomainServiceInfo.cpp
  OAIDomainServiceType.cpp
  OAIDomainTechContact.cpp
  OAIDomainWhoisPrivacyRequest.cpp
  OAIDownloadQsBackup_200_response.cpp
  OAIDownloadQsBackup_request.cpp
  OAIEmailAddress.cpp
  OAIEmailAddressName.cpp
  OAIEnableScrub_200_response.cpp
  OAIEnableScrub_500_response.cpp
  OAIFieldLabel.cpp
  OAIFloating_ipsCancel_200_response.cpp
  OAIFormValues.cpp
  OAIGenericResponse.cpp
  OAIGetAccountInfo_401_response.cpp
  OAIGetAccountTfaSetup_200_response.cpp
  OAIGetOauthRedirect_200_response.cpp
  OAIGetOrderDetail_200_response.cpp
  OAIGetOrderDetail_200_response_ips_inner.cpp
  OAIGetOrderDetail_200_response_packageCosts.cpp
  OAIGetOrderDetail_200_response_serviceTypes_inner.cpp
  OAIGetScrubIpDetails_200_response.cpp
  OAIGetScrubIpDetails_200_response_billingDetails.cpp
  OAIGetScrubIpDetails_200_response_client_links_inner.cpp
  OAIGetScrubIpDetails_200_response_extraInfoTables.cpp
  OAIGetScrubIpDetails_200_response_extraInfoTables_scrub_ips.cpp
  OAIGetScrubIpDetails_200_response_extraInfoTables_scrub_ips_rows_inner.cpp
  OAIGetScrubIpDetails_200_response_filter_firewall.cpp
  OAIGetScrubIpDetails_200_response_filter_firewall_filters_inner.cpp
  OAIGetScrubIpDetails_200_response_filter_firewall_rules_inner.cpp
  OAIGetScrubIpDetails_200_response_serviceInfo.cpp
  OAIGetWebsiteBuyIp_200_response.cpp
  OAIHardDrive.cpp
  OAIHome.cpp
  OAIHomeDetailsModulesBackups.cpp
  OAIHomeDetailsModulesDomains.cpp
  OAIHomeDetailsModulesLicenses.cpp
  OAIHomeDetailsModulesQuickservers.cpp
  OAIHomeDetailsModulesServers.cpp
  OAIHomeDetailsModulesVps.cpp
  OAIHomeDetailsModulesWebhosting.cpp
  OAIHomeServicesDomainsLinks.cpp
  OAIHomeServicesLicensesLinks.cpp
  OAIHomeServicesServersLinks.cpp
  OAIHomeServicesVpsLinks.cpp
  OAIHomeServicesWebhostingLinks.cpp
  OAIHome_details.cpp
  OAIHome_details_modules.cpp
  OAIHome_services.cpp
  OAIHome_services_backups.cpp
  OAIHome_services_domains.cpp
  OAIHome_services_licenses.cpp
  OAIHome_services_servers.cpp
  OAIHome_services_vps.cpp
  OAIHome_services_webhosting.cpp
  OAIHome_ticketStatus.cpp
  OAIHome_ticketStatusView.cpp
  OAIHostnameObject.cpp
  OAIInitiatePayment_200_response.cpp
  OAIInline_object.cpp
  OAIInvoice.cpp
  OAIInvoiceRow.cpp
  OAIIpBlock.cpp
  OAIIpLimitRange.cpp
  OAIIpObject.cpp
  OAILicense.cpp
  OAILicenseBillingDetails.cpp
  OAILicenseClientLink.cpp
  OAILicenseIpInfo.cpp
  OAILicenseIpInfoRow.cpp
  OAILicenseRow.cpp
  OAILicenseServiceInfo.cpp
  OAILicenseServiceType.cpp
  OAILicense_extraInfoTables.cpp
  OAILicensesCancel_200_response.cpp
  OAILicensesOrder.cpp
  OAILicensesOrderServiceCategories509.cpp
  OAILicensesOrderServiceTypes11482.cpp
  OAILicensesOrder_packageCosts.cpp
  OAILicensesOrder_serviceCategories.cpp
  OAILicensesOrder_serviceTypes.cpp
  OAILoginErrorResponse.cpp
  OAILoginInfo.cpp
  OAILoginServiceCounts.cpp
  OAILoginSubmissionExample.cpp
  OAILoginSubmissionExample_g_recaptcha_response.cpp
  OAILoginSubmissionExample_g_recaptcha_response_dep.cpp
  OAILoginSuccessResponse.cpp
  OAIMailAlertRequest.cpp
  OAIMailAlertUpdateRequest.cpp
  OAIMailAlertsResponse.cpp
  OAIMailAlertsResponse_inner.cpp
  OAIMailAttachment.cpp
  OAIMailBillingDetails.cpp
  OAIMailBlockClickHouse.cpp
  OAIMailBlockRspamd.cpp
  OAIMailBlocks.cpp
  OAIMailCancel_200_response.cpp
  OAIMailClientLink.cpp
  OAIMailDelistRequest.cpp
  OAIMailDelistResponse.cpp
  OAIMailDeliverabilityResponse.cpp
  OAIMailExtraInfoTable.cpp
  OAIMailExtraInfoTableRow.cpp
  OAIMailLog.cpp
  OAIMailLogEntry.cpp
  OAIMailOrder.cpp
  OAIMailRow.cpp
  OAIMailSchema.cpp
  OAIMailSchema_extraInfoTables.cpp
  OAIMailServiceInfo.cpp
  OAIMailServiceType.cpp
  OAIMailStatsType.cpp
  OAIMailStatsType_volume.cpp
  OAIMailStatsType_volume_from.cpp
  OAIMailStatsType_volume_ip.cpp
  OAIMailStatsType_volume_to.cpp
  OAIMailTutorialsTable.cpp
  OAIMailTutorialsTableRow.cpp
  OAIMemoryOption.cpp
  OAIModuleSettings.cpp
  OAIModules.cpp
  OAIMonthlyCounts.cpp
  OAIOperatingSystem.cpp
  OAIPasswordRequest.cpp
  OAIPatchOauthTwoFactor_200_response.cpp
  OAIPatchOauthTwoFactor_request.cpp
  OAIPaymentInvoiceRows.cpp
  OAIPlaceBuyNowServer_request.cpp
  OAIPlaceScrubOrder_201_response.cpp
  OAIPlaceScrubOrder_201_response_order_details.cpp
  OAIPlaceScrubOrder_201_response_order_details_cj_params.cpp
  OAIPostOauthCallback_200_response.cpp
  OAIPostOauthCallback_request.cpp
  OAIPostWebsiteBuyIp_200_response.cpp
  OAIPostWebsiteBuyIp_request.cpp
  OAIPostWebsiteMigration_200_response.cpp
  OAIPostWebsiteMigration_request.cpp
  OAIQueueResponse.cpp
  OAIQuickserver.cpp
  OAIQuickserverAddons.cpp
  OAIQuickserverAddonsRow.cpp
  OAIQuickserverBillingDetails.cpp
  OAIQuickserverClientLink.cpp
  OAIQuickserverIpInfo.cpp
  OAIQuickserverIpTableRow.cpp
  OAIQuickserverOrder.cpp
  OAIQuickserverOrderDistroSelUbuntu.cpp
  OAIQuickserverOrderServerDetails381.cpp
  OAIQuickserverOrderTemplatesUbuntu64.cpp
  OAIQuickserverOrderVersionCentosstream8.cpp
  OAIQuickserverOrder_distro_sel.cpp
  OAIQuickserverOrder_server_details.cpp
  OAIQuickserverOrder_templates.cpp
  OAIQuickserverOrder_version.cpp
  OAIQuickserverRow.cpp
  OAIQuickserverServiceExtra.cpp
  OAIQuickserverServiceInfo.cpp
  OAIQuickserverServiceMaster.cpp
  OAIQuickserver_extraInfoTables.cpp
  OAIQuickserver_serviceExtra.cpp
  OAIQuickserversCancel_200_response.cpp
  OAIRaidOption.cpp
  OAIRegion.cpp
  OAIReplyTicketRequest.cpp
  OAIReplyTicketResponseSchema.cpp
  OAIRestoreRequest.cpp
  OAIReverseDnsEntries.cpp
  OAIScrubIpFilterTypes.cpp
  OAIScrubIpFilterTypes_filters_value.cpp
  OAIScrubIpPlaceOrder.cpp
  OAIScrubIpsDeleteRule_200_response.cpp
  OAIScrubIpsDeleteRule_400_response.cpp
  OAIScrubIpsDeleteRule_500_response.cpp
  OAIScrubIpsLogRowSchema.cpp
  OAIScrubIpsRowSchema.cpp
  OAISearchAutocompleteResponse.cpp
  OAISendMail.cpp
  OAISendMailAdv.cpp
  OAIServer.cpp
  OAIServerAsset.cpp
  OAIServerAssets.cpp
  OAIServerBillingDetails.cpp
  OAIServerClientLink.cpp
  OAIServerExtraInfoTables.cpp
  OAIServerIpmiLiveInfo.cpp
  OAIServerIpmiLiveRequest.cpp
  OAIServerIpmiPowerRequest.cpp
  OAIServerLease.cpp
  OAIServerLocation1.cpp
  OAIServerNetworkInfo.cpp
  OAIServerNetworkInfo_assets.cpp
  OAIServerNetworkInfo_switchports.cpp
  OAIServerOrder.cpp
  OAIServerOrderBandwidth.cpp
  OAIServerOrderCPU.cpp
  OAIServerOrderConfigIds.cpp
  OAIServerOrderControlPanel.cpp
  OAIServerOrderFieldLabel.cpp
  OAIServerOrderFieldLabels.cpp
  OAIServerOrderFormValues.cpp
  OAIServerOrderGetResponse.cpp
  OAIServerOrderIP.cpp
  OAIServerOrderMemory.cpp
  OAIServerOrderOS.cpp
  OAIServerOrderRAID.cpp
  OAIServerOrder_bandwidth_li.cpp
  OAIServerOrder_cp_li.cpp
  OAIServerOrder_cpu_li.cpp
  OAIServerOrder_ips_li.cpp
  OAIServerOrder_memory_li.cpp
  OAIServerOrder_memory_li_254.cpp
  OAIServerOrder_os_li.cpp
  OAIServerRow.cpp
  OAIServerServiceInfo.cpp
  OAIServerSwitchport.cpp
  OAIServer_locations.cpp
  OAIServersBuyNowError.cpp
  OAIServersBuyNowResponse.cpp
  OAIServersBuyNowResponse_order_details.cpp
  OAIServersCancel_200_response.cpp
  OAIService.cpp
  OAIServiceCategories.cpp
  OAIServiceCategory.cpp
  OAIServiceType.cpp
  OAIServiceTypes.cpp
  OAIServices.cpp
  OAIServicesInfo.cpp
  OAISslCancel_200_response.cpp
  OAIStatusMonthlyBreakdown.cpp
  OAISuccessTextResponse.cpp
  OAITemplateRequest.cpp
  OAITextResponse.cpp
  OAITicketCustomFieldDetails.cpp
  OAITicketDetails.cpp
  OAITicketNew.cpp
  OAITicketNewResponse.cpp
  OAITicketPostDetails.cpp
  OAITicketPostDetails_inner.cpp
  OAITickets.cpp
  OAITicketsRow.cpp
  OAITickets_countArray.cpp
  OAITimezoneUpdate.cpp
  OAIUpdateAccountTfa_request.cpp
  OAIUpdateTicket.cpp
  OAIUpdateTicketResponseSchema.cpp
  OAIUrlRequest.cpp
  OAIVPSCancel_200_response.cpp
  OAIVPSTrafficDataDataSectionResponse.cpp
  OAIVPSTrafficDataDataSectionResponse_inner.cpp
  OAIViewMailLog_startDate_parameter.cpp
  OAIViewTicketResponse.cpp
  OAIVps.cpp
  OAIVpsBackupRow.cpp
  OAIVpsBackupRows.cpp
  OAIVpsBillingDetails.cpp
  OAIVpsCPData.cpp
  OAIVpsClientLink.cpp
  OAIVpsDAData.cpp
  OAIVpsDALicense.cpp
  OAIVpsExtraInfoTables.cpp
  OAIVpsIPInfo.cpp
  OAIVpsIPInfoRow.cpp
  OAIVpsOrder.cpp
  OAIVpsOrderPostRequest.cpp
  OAIVpsOrderPutRequest.cpp
  OAIVpsOrderPutResponse.cpp
  OAIVpsOrder_locationNames.cpp
  OAIVpsOrder_locationStock.cpp
  OAIVpsOrder_locationStock_1.cpp
  OAIVpsOrder_osNames.cpp
  OAIVpsOrder_packageCosts.cpp
  OAIVpsOrder_platformNames.cpp
  OAIVpsOrder_platformPackages.cpp
  OAIVpsOrder_serviceTypes.cpp
  OAIVpsOrder_serviceTypes_32.cpp
  OAIVpsOrder_templates.cpp
  OAIVpsOrder_templates_hyperv.cpp
  OAIVpsOrder_templates_hyperv_windows.cpp
  OAIVpsPlesk12Data.cpp
  OAIVpsPleskLicense.cpp
  OAIVpsRow.cpp
  OAIVpsServiceAddons.cpp
  OAIVpsServiceExtra.cpp
  OAIVpsServiceInfo.cpp
  OAIVpsServiceMaster.cpp
  OAIVpsSnapshot.cpp
  OAIVpsTemplateRow.cpp
  OAIVpsTemplatesList.cpp
  OAIVpsTrafficDataDataResponse.cpp
  OAIVpsTrafficDataSectionResponse.cpp
  OAIVpsTrafficHistoryResponse.cpp
  OAIVpsTrafficHistorySectionDataResponse.cpp
  OAIVpsTrafficHistorySectionResponse.cpp
  OAIVpsTrafficResponse.cpp
  OAIVpsTrafficTotalsResposne.cpp
  OAIVpsTrafficTotalsSectionResponse.cpp
  OAIVpsTrafficUsageAverageResponse.cpp
  OAIVpsTrafficUsageAverageSectionResponse.cpp
  OAIVpsTrafficUsageResponse.cpp
  OAIWebhostingCancel_200_response.cpp
  OAIWebsite.cpp
  OAIWebsiteBackups.cpp
  OAIWebsiteBackups_inner.cpp
  OAIWebsiteBillingDetails.cpp
  OAIWebsiteClientLink.cpp
  OAIWebsiteExtraInfoTables.cpp
  OAIWebsiteLoginResponse.cpp
  OAIWebsiteRow.cpp
  OAIWebsiteServiceInfo.cpp
  OAIWebsiteServiceMaster.cpp
  OAIWebsiteTable.cpp
  OAIWebsiteTableRow.cpp
  OAIWebsitesOrder.cpp
  OAIWebsitesOrderJsonServiceOffers.cpp
  OAIWebsitesOrderJsonServiceOffersItem.cpp
  OAIWebsitesOrderJsonServices.cpp
  OAIWebsitesOrderPackages.cpp
  OAIWebsitesOrderPackagesInfo.cpp
  OAIWebsitesOrderServiceOffer.cpp
  OAIWebsitesOrderServiceTypes.cpp
  OAIWebsitesOrder_packges.cpp
  OAIWebsitesOrder_serviceOffers.cpp
  OAIWebsitesOrder_serviceTypes.cpp
  OAIAccountApi.cpp
  OAIBackupsApi.cpp
  OAIBillingApi.cpp
  OAIDNSApi.cpp
  OAIDomainsApi.cpp
  OAIFloatingIPsApi.cpp
  OAILicensesApi.cpp
  OAIMailApi.cpp
  OAIPublicApi.cpp
  OAIQuickServersApi.cpp
  OAISSLCertificatesApi.cpp
  OAIScrubIpsApi.cpp
  OAIServersApi.cpp
  OAITicketsApi.cpp
  OAIVPSApi.cpp
  OAIWebhostingApi.cpp
  OAIHelpers.cpp
  OAIHttpRequest.cpp
  OAIHttpFileElement.cpp
  OAIOauth.cpp
  )

target_include_directories(${PROJECT_NAME}
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

target_link_libraries(${PROJECT_NAME}
    PUBLIC
        Qt${QT_VERSION_MAJOR}::Core
        Qt${QT_VERSION_MAJOR}::Network
        Qt${QT_VERSION_MAJOR}::Gui

)

configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/Config.cmake.in
    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
    INSTALL_DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}"
)

install(
    TARGETS ${PROJECT_NAME}
    EXPORT ${PROJECT_NAME}Targets
    LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
    INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}"
)

install(
    FILES ${HEADER_FILES}
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
)

install(
    FILES "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
)

install(
    EXPORT ${PROJECT_NAME}Targets
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
)
